sense/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sense
---
apiVersion: v1
kind: Namespace
metadata:
  name: sense-bb
