sense/templates/ingress_frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sense-frontend-proxy
  namespace: sense
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: nginx-external
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: portal
                port:
                  number: 8080
          - path: /(auth/.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-auth
                port:
                  number: 8080
